--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chalk": "^1.0.0",
     "connect-session-sequelize": "^3.0.0",
     "cookie-parser": "^1.3.4",
+    "cookie-session": "^2.0.0-alpha.1",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
     "gulp": "^3.8.11",
