--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "angular": "^1.5.0-beta.0",
-    "angular-animate": "^1.4.7",
+    "angular-animate": "^1.5.8",
     "angular-cookies": "^1.5.8",
     "angular-mocks": "^1.4.0",
+    "angular-touch": "^1.5.8",
     "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
     "babel-preset-es2015": "^6.6.0",
